correction du contraste/wave

--- a/style.css
+++ b/style.css
@@ -785,7 +785,7 @@ h4 {
 
 .project
 {
-    color: red !important;
+    color: yellow !important;
 }
 
 .btn-atomic-tangerine {
